2005-07-30  Glynn Foster  <glynn.foster@sun.com>

	* foundation.gnome.org/finance/index.wml: Bring back the
	summary for GUADEC 2004.

2005-07-29  Murray Cumming  <murrayc@murrayc.com

	* foundation.gnome.org/contact/index.wml: Uncommented-out the 
	director@ address, because Owen says it just shouldn't be used 
	as a from address.

2005-07-27  Murray Cumming  <murrayc@murrayc.com>

	* foundation.gnome.org/contact/index.wml: Added the address, 
	based on the one one the friends page. Commented-out the 
	director@ email address because (I'm fairly sure) the board 
	asked our director to stop using this.

2005-07-25  Glynn Foster  <glynn.foster@sun.com>

	* foundation.gnome.org/finance/Makefile.am: Update.
	* foundation.gnome.org/finance/gnome-foundation-fiscal-year-04-and-
	03.pdf, foundation.gnome.org/finance/index.wml: Add new statement
	from Tim, removing the link to the GUADEC one.

2005-07-13  Owen Taylor  <otaylor@redhat.com>

	* foundation.gnome.org/finance/Makefile.am: Add 2004 summary
	PDF file to Makefile.am

2005-07-13  Owen Taylor  <otaylor@redhat.com>

	* foundation.gnome.org/finance/index.wml: Add 2004 GUADEC summary.

	* foundation.gnome.org/about/index.wml: Add information about
	advisory board fees, update advboard list.

	* foundation.gnome.org/about/charter/index.wml: Note that the
	advisory board information is out of date.

2005-05-23  James Henstridge  <james@jamesh.id.au>

	* rules.common (%.php): go back to evilsedhack for php files,
	since PHP is evil.  Should fix this when we can get the XSLT
	working for the PHP scripts we have.

2005-05-20  James Henstridge  <james@jamesh.id.au>

	* autogen.sh: make this script pass on errors caused by
	autoconf, automake, etc rather than continuing to run.
	Also call automake with the --foreign argument so it doesn't
	complain about missing AUTHORS and NEWS files.

	* rules.common: use xsltproc to process the *.wml documents.

	* include/add-header.xsl: new XSLT script that takes the place of