@@ -27,6 +27,8 @@ foundation.gnome.org/elections/2004/Makefile
 foundation.gnome.org/img/Makefile
 foundation.gnome.org/img/logos/Makefile
 foundation.gnome.org/legal/Makefile
+foundation.gnome.org/licensing/Makefile
+foundation.gnome.org/licensing/usergroup/Makefile
 foundation.gnome.org/finance/Makefile
 foundation.gnome.org/membership/Makefile
 foundation.gnome.org/news/Makefile
