@@ -1,0 +1,8 @@
+SUBDIRS = usergroup
+
+urlpath = /licensing
+ 
+page_SCRIPTS = \
+	index.html
+
+include $(top_srcdir)/rules.common
