@@ -1,0 +1,17 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html>
+
+  <head>
+    <title>Trademark and Copyright licensing</title>
+    <meta name="cvsdate" content="$Date$" />
+  </head>
+ 
+  <body>
+    <h1>Trademark and Copyright licensing</h1>
+
+    <p>
+    </p>
+
+  </body>
+</html>
