@@ -1,0 +1,6 @@
+urlpath = /licensing/usergroup
+ 
+page_SCRIPTS = \
+	index.html
+
+include $(top_srcdir)/rules.common
