@@ -1,0 +1,219 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html>
+
+  <head>
+    <title>User Group License Agreement</title>
+    <meta name="cvsdate" content="$Date$" />
+  </head>
+ 
+  <body>
+<p>
+The following is a license to allow independent GNOME user groups to
+use the GNOME trademarks and copyrighted materials to promote
+GNOME. You can execute this license by, after reading it carefully,
+filling out the form that follows the license and clicking on “I
+agree.” You will get confirmation within a few days that the GNOME
+foundation has received your submission. If you have any questions
+about this license, please mail licensing@gnome.org.
+</p>
+<p>
+</p>
+<hr/>
+<h1 align='center'>GNOME FOUNDATION</h1>
+<h1 align='center'>LICENSE AGREEMENT</h1>
+<p>
+THE FOLLOWING IS A LEGAL AGREEMENT (“LICENSE”) BETWEEN GNOME FOUNDATION (“GNOME”)
+AND YOUR GNOME USER GROUP (“GROUP”). BY INDICATING YOUR ACCEPTANCE AND SUBMITTING
+THIS LICENSE TO GNOME, THE GROUP AGREES TO BE LEGALLY BOUND BY AND COMPLY WITH THE
+TERMS OF THIS LICENSE. COMPLIANCE WITH THIS LICENSE AND WITH GNOME’S USER GROUP
+GUIDELINES ARE CONDITIONS TO REMAINING IN GOOD STANDING AS A GNOME USER GROUP AND
+TO OBTAINING ANY BENEFITS WHICH MAY BE OFFERED BY GNOME TO RECOGNIZED USER GROUPS.
+THE GOAL OF THIS AGREEMENT IS TO BALANCE GNOME’S NEED TO PROTECT ITS IMPORTANT
+TRADEMARK RIGHTS WITH GNOME’S DESIRE TO ALLOW VALUED USER GROUPS TO USE CERTAIN
+GNOME TRADEMARKS IN CONNECTION WITH WORKING WITH ITS PRODUCTS AND SERVICES.
+</p>
+<ol type='1'>
+<li><u>Trademark License</u>
+<ol type='a'>
+  <li>Subject to the terms and conditions of this License, GNOME hereby grants the Group a limited,
+nonexclusive, non-transferable, non-sublicenseable license (i) to use the name “GNOME” as part
+of your user group name; (ii) to use a GNOME product name as part of your user group name, if
+the Group is focused on the use of such product; and (iii) to display the “GNOME” user group
+logo(s) posted at [http://www.gnome.org] in connection with the foregoing, in accordance with
+the terms of this License and GNOME’s then-current trademark guidelines applicable to user
+groups (“Trademark Guidelines”). The GNOME name, any permitted GNOME product names,
+and the GNOME logo(s) posted at [http://www.gnome.org] are referred to collectively as the
+“Licensed Marks”.</li>
+ <li>
+ The Group may not use the Licensed Marks for any commercial purpose whatsoever or in any
+manner other than as expressly permitted below. To preserve the value of the Licensed Marks, the
+Group’s operations and activities, and the manner in which they are conducted, shall be consistent
+with the high standards of quality traditionally associated with GNOME products and services.
+All uses of the Licensed Marks must be in accordance with the Trademark Guidelines. GNOME
+reserves the right to request a copy of all materials and items that contain the Licensed Marks to
+ensure compliance with the terms of this License and the Trademark Guidelines.
+ </li>
+ <li>The Group may use the Licensed Marks solely in connection with Group activities as described at
+[http://www.gnome.org] and in related promotional literature, newsletters, website content, and
+other non-commercial communications relating to official Group business.</li>
+ <li>In using the Licensed Marks solely for the above-described purposes, without Gnome’s express
+written permission neither the Group nor its members shall:
+ <ol type='i'>
+   <li> state or in any way imply that they speak for, act on behalf of, or represent GNOME;</li>
+   <li> state or in any way imply that GNOME agrees with, endorses, approves, ascribes to,
+consents to, or recommends any views or opinions expressed by the Group or any of
+its members;</li>
+   <li> use the trademark “GNOME” or any other trademark owned by GNOME in their
+URL or domain name; or</li>
+   <li> use any trademark owned by GNOME other than the Licensed Marks.</li>
+   <li>take any other action that might affect the distinctive quality of the Licensed Marks
+or adversely affect the reputation of GNOME or its products or services.</li>
+  </ol>
+  </li>
+</ol>
+</li>
+<li><u>Copyright License</u>
+<ol type='a'>
+  <li>Subject to the terms and conditions of this License, GNOME hereby grants the Group a limited,
+  nonexclusive, non-transferable, non-sublicenseable license (i) to reproduce and distribute in print
+  and electronic format the Licensed Works to members of the Group; (ii) to post the Licensed
+  Works on the Group web site; and (iii) to display the Licensed Works at Group meetings and other
+  events in which official business of the Group is conducted, or in which members of the Group
+  represent the Group on official business.</li>
+  <li>The “Licensed Works” includes any newsletters, marketing materials or other copyrightable
+  works that GNOME may make available to the Group as part of GNOME’s user group program;
+  provided, however, that computer software and documentation are expressly excluded. Any use
+  or distribution of computer software and documentation require a separate written license
+  agreement. In addition, in the event that GNOME notifies the Group of any additional terms or
+  restrictions relating to the use of any Licensed Work, such additional terms or restrictions will be
+  deemed to constitute part of this License.</li>
+  <li>You may not modify, create derivative works or make any use of the Licensed Works other than
+  as expressly permitted by this License; provided that you may modify any invitation materials or
+  similar announcement templates solely as necessary to update them for use with Group activities,
+  GNOME may withdraw your right to use any Licensed Work by notifying you that such work
+  may no longer be used.</li>
+</ol>
+</li>
+<li><u>Legal Notices</u>
+<ol type='a'>
+  <li><u>Trademark Notices</u>. The following legal notices must appear in connection with all uses of the
+Licensed Marks:<br/>
+“GNOME and the GNOME logo(s) are trademarks or registered trademarks of GNOME Foundation in the
+U.S.A. or other countries.”<br/>
+“[Group name] is an independent user group that does not speak for, act on behalf of, or represent GNOME
+Foundation, nor are its views ascribed to or practices recommended by GNOME Foundation.”</li>
+ <li><u>Copyright Notices</u>. The copyright notices on the Licensed Works must be reproduced on all
+copies thereof and may not be altered, obfuscated or removed. In the event that no copyright notice
+appears on any of the Licensed Works, the following legal notices must be reproduced on all copies of
+the applicable Licensed Work: “© GNOME Foundation. All rights reserved.”</li>
+</ol>
+</li>
+<li><u>Ownership Rights</u> . The Group acknowledges GNOME’s ownership of the Licensed Marks and Licensed
+Works, including all modifications and derivative works. The Group acquires no rights relating thereto,
+other than the license granted herein, and all uses shall inure to the sole benefit of GNOME. Absent
+Gnome’s express written permission, the Group may not use the Licensed Marks or Licensed Works, or any
+variations thereof, and may not register a trademark, company name, trade name, domain name or business
+identity incorporating the Licensed Marks or any other GNOME trademark or any mark confusingly
+similar thereto. In the event that the Group or any member of the Group applies for or registers a domain
+name containing any trademark owned by GNOME without Gnome’s permission, the Group will cause
+such domain name to be assigned to GNOME at no cost. All rights to any modifications to the Licensed
+Works shall be owned by GNOME and are hereby assigned to GNOME. GNOME grants the Group no
+other rights in the Licensed Works or Licensed Marks other than set forth herein, and any other use by the
+Group may be considered an infringement. All rights not expressly granted herein are reserved.
+</li>
+<li><u>User Group Compliance</u> . The rights granted under this License are conditioned upon the on-going
+compliance by the Group, and by each member of the Group, with GNOME’s rules and requirements for
+recognized user groups (“User Group Guidelines”). The Group agrees to comply, and will ensure
+compliance by each of its members, with this License and with the User Group Guidelines. GNOME’s
+User Group Guidelines, which may change from time to time, are posted on GNOME’s web site or may be
+otherwise made publicly available or communicated to the Group.</li>
+<li><u>Termination</u>. The License is effective upon acceptance and submission by the authorized representative of
+the Group, subject to GNOME’s right to verify the Group’s compliance with GNOME’s requirements for
+recognition as a user group. This License will continue until terminated. Either party may terminate this
+License at any time. Without limiting the foregoing, GNOME reserves the right to immediately terminate
+this License at any time if the Group, or any member of the Group, violates the terms of this License or
+GNOME’s User Group Guidelines. GNOME, at its sole option, may elect to provide the Group with notice
+of any noncompliance and guidance to permit the Group to cure such noncompliance; provided, however,
+that granting of any cure period or any waiver shall not restrict GNOME from electing to terminate this
+License at any time in its sole discretion. GNOME further reserves the right, in its sole discretion, to
+modify the terms of this License and/or the Trademark Guidelines, to withdraw license rights in certain
+jurisdictions or with respect to certain marks or works, or to modify or terminate the entire GNOME user
+group program or any aspect of it. The Group will have thirty (30) days after notice to conform to the new
+changes and/or guidelines unless GNOME notifies the Group of an expedited implementation period. If
+this License is terminated, the Group shall immediately cease all use of the Licensed Marks and Licensed
+Works and returning all embodiments thereof to GNOME.</li>
+<li><u>Disclaimer; Limitation of Liability</u>. THE LICENSE IS GRANTED ON AN “AS IS” BASIS, WITHOUT
+WARRANTIES OF ANY KIND, EITHER EXPRESS OR IMPLIED INCLUDING, WITHOUT
+LIMITATION, ANY IMPLIED WARRANTIES OF TITLE, NON-INFRINGEMENT, FITNESS OR
+ACCURACY. IN NO EVENT WILL GNOME BE LIABLE TO THE GROUP OR ANY MEMBER FOR
+ANY DIRECT, INDIRECT, SPECIAL, INCIDENTAL OR CONSEQUENTIAL DAMAGES ARISING
+OUT OF THIS LICENSE, ON ANY LEGAL THEORY, EVEN IF GNOME HAS BEEN ADVISED OF
+THE POSSIBILITY OF SUCH DAMAGES.</u>
+<li><u>Permitted Access</u>. Upon acceptance of this License, the authorized representative of the Group may
+request a copy of the GNOME user group logo(s) and will be placed on any distribution list for any
+Licensed Works that may be made available by GNOME to the Group</li>
+<li><u>Miscellaneous</u>. This License is governed by the laws of the State of Massachusetts without reference to
+conflict of law principles, and the Group consents to exclusive jurisdiction and venue of the courts located
+in Middlesex County, Massachusetts, and hereby waives any objection to such forum. Any dispute arising
+out of or relating to this License will be submitted to final and binding arbitration in Middlesex County,
+Massachusetts under the rules of the American Arbitration Association. Notwithstanding the foregoing,
+GNOME reserves the right to take action as it may deem appropriate in any court of competent jurisdiction
+to protect its intellectual property rights and/or to enforce the terms of this License relating thereto. Each
+party waives trial by jury in any action, suit, proceeding, or counterclaim of any kind arising out of or
+related to this License. This License constitutes the entire agreement between the parties with respect to
+the subject matter hereof. There are no understandings, agreements or representations with respect to the
+subject matter hereof not specified herein. GNOME shall not be bound by any additional provisions that
+may appear in any communication from the Group or its members. This License may only be modified by
+mutual written agreement or by written notice from GNOME to the Group of any changes to GNOME’s
+licensing policies. The License granted hereunder is personal to the Group may not be assigned or
+transferred to any third party by any act of Licensee or by operation of law or otherwise. Subject to the
+foregoing, this License inures to the benefit of the parties and their permitted successors and assigns. If
+any provision of this License is invalid or unenforceable under applicable law, it shall not affect the validity
+or enforceability of the remainder of the terms of this License, and without further action by the parties
+hereto, such provision shall be reformed to the minimum extent necessary to make such provision valid and
+enforceable. No term or provision hereof shall be deemed waived and no breach consented to unless such
+waiver or consent shall be in writing and signed by the party to be charged with such waiver or consent.</li>
+<li><u>Privacy Policy</u>. GNOME collects personal information from members of GNOME User Groups.
+GNOME’s privacy policy, which can be found at [http://www.gnome.org], explains GNOME’s collection
+and use of such information. The terms of GNOME’s privacy policy, as it may be updated from time to
+time, are incorporated in and made part of this License.</li>
+</ol>
+<hr/>
+<form action="/cgi-bin/usergroup_license.py" method="post">
+<table>
+<tr>
+  <td colspan=2><b>User group</b></td>
+</tr>
+<tr>
+  <td align='right'><label for="groupname"><i>Name:</i> </label></td> 
+  <td><input type="text" size="60" id="groupname" name="groupname"></br></td>
+</tr>
+<tr>
+  <td align='right'><label for="name"><i>Address:</i> </label></td> 
+  <td><textarea id="groupaddress" name="groupaddress" rows="6" cols="60"></textarea></br></td>
+</tr>
+<tr>
+  <td align='right'><label for="groupemail"><i>Contact email:</i></label></td>
+  <td><input type="text" size="60" id="groupemail" name="groupemail"></br></td>
+</tr>
+<tr>
+  <td colspan=2><b>Submitter</b></td>
+</tr>
+<tr>
+  <td align='right'><label for="subname"><i>Name:</i> </label></td>
+  <td><input type="text" size="60" id="subname" name="subname"></br></td>
+</tr>
+<tr>
+  <td align='right'><label for="subemail"><i>Email:</i></label></td>
+  <td><input type="text" size="60" id="subemail" name="subemail"></br></td>
+</tr>
+</table>
+<p>
+  I have read and agree to the terms of the GNOME User Group License Agreement. I confirm that I have the
+  authority to accept and submit this License to GNOME on behalf of the Group.
+</p>
+<input type="submit" value="I agree">
+</form>
+  </body>
+</html>
