@@ -1,3 +1,8 @@
+2005-08-02  Owen Taylor  <otaylor@redhat.com>
+
+	* foundation.gnome.org/licensing/**: Start of copyright/trademark
+	section with user group license agreement.
+
 2005-07-30  Glynn Foster  <glynn.foster@sun.com>
 
 	* foundation.gnome.org/finance/index.wml: Bring back the
